Lagt til kall til standalone endepunkt #deploy-backend-dev (#2567)
* Lagt til kall til standalone endepunkt